# resource-mgr

./: CMakeLists.txt  README.md
include/: ResourceManager.h
tests/: CMakeLists.txt  ResourceRegistryTests.test.cpp
